src/test/ui/kindck/kindck-impl-type-params-2.stderr
error[E0277]: the trait bound `std::boxed::Box<{integer}>: std::marker::Copy` is not satisfied
  --> $DIR/kindck-impl-type-params-2.rs:13:16
   |
LL | fn take_param<T:Foo>(foo: &T) { }
   |    ----------   --- required by this bound in `take_param`
...
LL |     take_param(&x);
   |                ^^ the trait `std::marker::Copy` is not implemented for `std::boxed::Box<{integer}>`
   |
   = note: required because of the requirements on the impl of `Foo` for `std::boxed::Box<{integer}>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
